# webhook-relay

./: .dockerignore  .env.default  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SKILL.md  THIRD_PARTY_NOTICES.md  docker-compose.dev.yml  docker-compose.yml  hooks.yaml  proposal.md
.github/workflows/: ci.yml  publish-crates.yml  release-binaries.yml
apps/: README.md
apps/automq-consumer/: Cargo.toml  Dockerfile
apps/automq-consumer/src/: config.rs  consumer.rs  forwarder.rs  main.rs
apps/default-openclaw/: contract.toml
apps/kafka-openclaw-hook/: Cargo.toml  README.md  SKILL.md
apps/kafka-openclaw-hook/src/: config.rs  consumer.rs  dlq.rs  forwarder.rs  main.rs
config/: kafka-core.toml
crates/: README.md
crates/hook-runtime/: Cargo.toml  README.md
crates/hook-runtime/src/: lib.rs
crates/hook-runtime/src/adapters/: mod.rs
crates/hook-runtime/src/adapters/egress/: kafka.rs  mcp.rs  mod.rs  openclaw.rs  websocket_client.rs  websocket_server.rs
crates/hook-runtime/src/adapters/ingress/: mcp.rs  mod.rs  websocket.rs
crates/hook-runtime/src/smash/: config.rs  consumer.rs  dlq.rs  mod.rs
crates/relay-core/: Cargo.toml  README.md  SKILL.md
crates/relay-core/src/: contract.rs  contract_validator.rs  filters.rs  kafka_config.rs  lib.rs  model.rs  sanitize.rs  signatures.rs  timestamps.rs
deploy/nginx/: hook-serve.conf  webhook-relay.conf
docs/: adapters.md  architecture.md  configuration.md  deployment.md  envelope.md  observability.md  plugins.md  security.md
docs/references/: release-publishing.md
firecracker/: README.md  firecracker-config.template.json  hook-serve.service  webhook-relay.service
firecracker/runtime/: boot_args.default  broker_inventory.sh  cleanup.sh  jailer.defaults.json  launch.sh  overwatcher.sh  ratelimits.default.json
firecracker/systemd/: external-blackbox.service  external-chisel-check.service  firecracker-boot-logger.service  firecracker-kafka.env.example  firecracker-network.service  firecracker-overwatcher.service  firecracker-proxy-mux.service  firecracker-relay.env.example  firecracker-shutdown-logger.service  firecracker-watchdog.service  firecracker@.service  kernel-kmsg-capture.service  network.env.example  overwatcher.env.example  proxy-mux.env.example  proxy-mux.sh  pstore-collect.service  runtime.env.example
firecracker/watchdog/: external-chisel-check.sh  pstore-collect.sh  watchdog.env.example  watchdog.sh
memory/: agent-tasks.md  coder-tasks.md
references/: agent-orchestrator.md  boot.md  coder-orchestrator.md  github-hooks.md  hook-definition.md  linear-hooks.md  openclaw-agents.md  openclaw-relay.md  openclaw-subagents.md  payload-sanitization.md  setup-wizard.md  tailscale.md
scripts/: build-firecracker-rootfs.sh  commit-and-push.sh  gen-certs.sh  init.sh  relay-github.sh  relay-linear.sh  run-firecracker.sh  sanitize-payload.py  setup-firecracker-bridge-network.sh  smoke-test-rust.sh  smoke-test.sh  teardown-firecracker-bridge-network.sh
skills/add-webhook-source/: SKILL.md
skills/contract-authoring/: SKILL.md
skills/kafka-add-broker/: SKILL.md
skills/kafka-add-broker/scripts/: bootstrap-kafka-broker.sh
skills/kafka-topic-setup/: SKILL.md
skills/kafka-topic-setup/scripts/: create-hook-topics.sh
skills/pipeline-debug/: SKILL.md
skills/release-workflow/: SKILL.md
src/: client_ip.rs  config.rs  envelope.rs  idempotency.rs  keys.rs  lib.rs  main.rs  metrics.rs  middleware.rs  model.rs  producer.rs  signatures.rs  store.rs
src/sources/: example.rs  github.rs  gmail.rs  linear.rs  mod.rs
systemd/: automq-consumer.service  hook-serve.service  kafka-openclaw-hook.service  webhook-relay.service
tools/hook/: Cargo.toml  README.md
tools/hook/src/: capabilities.rs  cli.rs  config.rs  main.rs
tools/hook/src/commands/: config.rs  debug.rs  infra.rs  introduce.rs  logs.rs  mod.rs  relay.rs  replay.rs  serve.rs  smash.rs  test.rs
