[package]
name = "webhook-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
backoff = { version = "0.4.0", features = ["tokio"] }
hex = "0.4.3"
hmac = "0.12.1"
moka = { version = "0.12.11", features = ["future"] }
prometheus = "0.14.0"
redb = "3.1.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
subtle = "2.6.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.21.0"
