[package]
name = "kafka-openclaw-hook"
version = "0.2.0"
edition = "2024"
description = "Outbound Kafka consumer that forwards webhook events to OpenClaw."
license = "MIT OR Apache-2.0"
repository = "https://github.com/heyAyushh/webhook-relay"
readme = "README.md"
rust-version = "1.85"
keywords = ["kafka", "consumer", "webhook", "openclaw"]
categories = ["network-programming"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
]

[dependencies]
anyhow = "1.0.98"
hook-runtime = { path = "../../crates/hook-runtime" }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
