[package]
name = "relay-core"
version = "0.2.0"
edition = "2024"
description = "Shared models and security primitives for the webhook-relay workspace."
license = "MIT OR Apache-2.0"
repository = "https://github.com/heyAyushh/webhook-relay"
readme = "README.md"
rust-version = "1.85"
keywords = ["webhook", "security", "hmac", "sanitize", "kafka"]
categories = ["parser-implementations", "data-structures"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
]

[dependencies]
anyhow = "1.0.98"
hex = "0.4.3"
hmac = "0.12.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
subtle = "2.6.1"
toml = "0.8.19"

[dev-dependencies]
tempfile = "3.21.0"
