[package]
name = "hook"
version = "0.1.0"
edition = "2024"
description = "Utility CLI for serve/relay/smash workflows and operations."
license-file = "../../LICENSE"
repository = "https://github.com/heyAyushh/webhook-relay"
readme = "README.md"
rust-version = "1.85"
keywords = ["webhook", "kafka", "cli", "ops"]
categories = ["command-line-utilities", "network-programming"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
dirs = "6.0.0"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
regex = "1.11.1"
relay-core = { version = "0.2.0", path = "../../crates/relay-core" }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
which = "8.0.0"

[dev-dependencies]
tempfile = "3.21.0"
